--- a/cli/.goreleaser.yaml
+++ b/cli/.goreleaser.yaml
@@ -14,7 +14,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/youruser/codo/cmd.version={{.Version}}
+      - -s -w -X github.com/hergert/codo/cmd.version={{.Version}}
     goos: [linux, darwin, windows]
     goarch: [amd64, arm64]
 
@@ -28,40 +28,40 @@ checksum:
 
 release:
   github:
-    owner: youruser
-    name: codo
+    owner: hergert
+    name: codo-agentic-toolkit
   draft: false
   prerelease: false
 
-brews:
+homebrew_casks:
   - name: codo
     repository:
-      owner: youruser
+      owner: hergert
       name: homebrew-tap
     commit_author:
-      name: youruser
+      name: hergert
       email: you@example.com
-    directory: Formula
-    homepage: "https://github.com/youruser/codo"
-    description: "Modern CLI to install/update/remove the Codo Agentic Toolkit."
+    directory: Casks
+    homepage: "https://github.com/hergert/codo-agentic-toolkit"
+    description: "CLI to manage the Codo Agentic Toolkit."
     install: |
       bin.install "codo"
 
 scoops:
   - name: codo
     repository:
-      owner: youruser
+      owner: hergert
       name: scoop-bucket
-    homepage: "https://github.com/youruser/codo"
+    homepage: "https://github.com/hergert/codo"
     description: "Modern CLI to manage the Codo Agentic Toolkit."
 
 winget:
   - name: codo
     publisher: "Codo Team"
-    package_identifier: youruser.codo
+    package_identifier: hergert.codo
     short_description: "Modern CLI to manage the Codo Agentic Toolkit."
-    homepage: "https://github.com/youruser/codo"
+    homepage: "https://github.com/hergert/codo"
     repository:
-      owner: youruser
+      owner: hergert
       name: winget-pkgs
 
