--- a/cli/.goreleaser.yaml
+++ b/cli/.goreleaser.yaml
@@ -14,7 +14,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/hergert/codo/cmd.version={{.Version}}
+      - -s -w -X github.com/hergert/codo-agentic-toolkit/cli/cmd.version={{.Version}}
     goos: [linux, darwin, windows]
     goarch: [amd64, arm64]
 
