--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,11 +69,10 @@ jobs:
           git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
           git push origin "$NEW_TAG"
 
-      - name: Prepare embedded pack
+      - name: Prepare embedded pack & smoke build
         run: |
-          cd cli
-          rm -rf .embedded_pack
-          cp -r ../pack .embedded_pack
+          ./scripts/embed-pack.sh
+          go build -o /tmp/codo ./cli
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
