--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,10 @@ jobs:
             NEW_TAG="${{ inputs.tag }}"
           else
             # Auto-increment patch version
-            LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+            LATEST_TAG=$(git tag -l "v*" --sort=-version:refname | head -n1)
+            if [ -z "$LATEST_TAG" ]; then
+              LATEST_TAG="v1.0.0"
+            fi
             echo "Latest tag: $LATEST_TAG"
 
             # Extract version numbers (strip 'v' prefix)
@@ -77,7 +80,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          version: '~> v1'
           args: release --clean
           workdir: ./cli
         env:
