--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
       - name: Upload pack asset to release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ steps.version.outputs.tag || github.ref_name }}
           files: |
             dotclaude-pack.zip
             dotclaude-pack.sha256
