--- a/cli/.goreleaser.yaml
+++ b/cli/.goreleaser.yaml
@@ -22,6 +22,9 @@ archives:
   - builds: [codo]
     format: tar.gz
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    format_overrides:
+      - goos: windows
+        format: zip
 
 checksum:
   name_template: "checksums.txt"
