--- a/cli/justfile
+++ b/cli/justfile
@@ -4,10 +4,15 @@
 default:
     @just --list
 
+# Refresh embedded pack bytes (idempotent)
+ensure-pack:
+    @echo "⏳ go generate ./internal/pack"
+    @go generate ./internal/pack
+    @echo "✅ embedded pack up to date"
+
 # Build the binary with embedded content (output to repo root dist/)
-build:
+build: ensure-pack
     @echo "Building codo with embedded pack..."
-    @../scripts/embed-pack.sh >/dev/null
     @mkdir -p ../dist
     @go build -o ../dist/codo .
     @echo "✅ Built ../dist/codo"
@@ -29,18 +34,15 @@ dev: build
     @echo "✅ Built codo binary in dist/"
 
 # Run tests
-test:
-    @../scripts/embed-pack.sh >/dev/null
+test: ensure-pack
     go test ./...
 
 # Run tests with race detector
-test-race:
-    @../scripts/embed-pack.sh >/dev/null
+test-race: ensure-pack
     go test -race ./...
 
 # Run go vet
-vet:
-    @../scripts/embed-pack.sh >/dev/null
+vet: ensure-pack
     go vet ./...
 
 # Format code
