--- a/cli/.goreleaser.yaml
+++ b/cli/.goreleaser.yaml
@@ -22,7 +22,7 @@ builds:
 archives:
   - builds: [codo]
     format: tar.gz
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os | lower }}_{{ .Arch }}"
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format_overrides:
       - goos: windows
         format: zip
