--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  workflow: write
 
 concurrency:
   group: release-${{ github.ref }}
